# rootdrop

./: SETTINGS_FIX_SUMMARY.md
backend/: Cargo.toml
backend/migrations/: remove_unused_settings_columns.sql
backend/src/: main.rs  models.rs  tui.rs  tui_middleware.rs
backend/src/handlers/: admin.rs  download.rs  settings.rs
frontend/pingo/src/components/shared/: Navbar.vue
frontend/pingo/src/pages/account/: AccountModern.vue
frontend/pingo/src/pages/account/components/: AdminSettings.vue
frontend/pingo/src/pages/auth/: Login.vue  Register.vue
frontend/pingo/src/pages/download/: Download.vue
frontend/pingo/src/pages/main/: Home.vue
