[package]
name = "pingo-share-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.9"
actix-multipart = "0.7"
actix-cors = "0.7"
actix-files = "0.6"

# Async runtime
tokio = { version = "1.41", features = ["full"] }
futures-util = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JWT & Auth
jsonwebtoken = "9.3"
bcrypt = "0.15"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
mime_guess = "2.0"
sanitize-filename = "0.5"
sha2 = "0.10"
hex = "0.4"

# Logging
env_logger = "0.11"
log = "0.4"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Archive
zip = "2.2"

# Rate limiting
actix-governor = "0.6"
governor = "0.7"
bzip2-sys = "0.1.13"
bzip2 = "0.6.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
